<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>

    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <string name="toast_media_streamer">This button will launch my spotify streamer app!</string>
    <string name="toast_super_duo1">This button will launch my scores app!</string>
    <string name="toast_super_duo2">This button will launch my library app!</string>
    <string name="toast_ant_terminator">This button will launch my build it bigger app!</string>
    <string name="toast_materialize">This button will launch my xyz reader app!</string>
    <string name="toast_capstone">This button will launch my capstone app!</string>
</resources>
