<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:id="@+id/textView" />

    <Button
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/btn_media_streamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <Button
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/btn_super_duo1"
        android:layout_below="@+id/btn_media_streamer"
        android:layout_alignLeft="@+id/btn_media_streamer"
        android:layout_alignStart="@+id/btn_media_streamer" />

    <Button
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/btn_super_duo2"
        android:layout_below="@+id/btn_super_duo1"
        android:layout_alignLeft="@+id/btn_super_duo1"
        android:layout_alignStart="@+id/btn_super_duo1" />

    <Button
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/btn_ant_terminator"
        android:layout_below="@+id/btn_super_duo2"
        android:layout_alignLeft="@+id/btn_super_duo2"
        android:layout_alignStart="@+id/btn_super_duo2" />

    <Button
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/btn_materialize"
        android:layout_below="@+id/btn_ant_terminator"
        android:layout_alignLeft="@+id/btn_ant_terminator"
        android:layout_alignStart="@+id/btn_ant_terminator" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/red_500"
        android:text="@string/capstone"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_materialize"
        android:layout_alignLeft="@+id/btn_materialize"
        android:layout_alignStart="@+id/btn_materialize" />

</RelativeLayout>
